# globalsettings

./: CMakeLists.txt  LICENSE  README.md
cmake/: CPack.cmake  Config.cmake.in
python/: bindings.cpp
src/: changewatcher.cpp  changewatcher.h  globalsettings.cpp  globalsettings.h  settings.cpp  utilssettings.h
